  o An about dialog has been added for both gtk and qt hosts.
  o Gadgets' about dialog has been reimplemented with platform independent
    code.
  o A Doxyfile has been included in source package, which can be used for
    generating API reference manual with doxygen command. graphviz is needed.
  o API reference manual has been improved dramatically.

* 0.10.4 - Dec 16th 2008
  o Following reported issues have been fixed: 242, 246, 245, 253, 239, 249,
    250, 243, 234, 254, 255
  o Many optimizations in performance and memory consumption.
  o Support for NPAPI plugins (like Flash) has been improved a lot.
  o gtkmoz_browser_element has been improved a lot.
  o gtk host now supports running a gadget in standalone mode.
  o Gadget Designer has been improved a lot. And it now runs in standalone
    mode, just like an ordinary application.
  o gtk sidebar host has been improved a lot.
  o Many bugs related to qt host have been fixed.
  o Many other bugfixes.

* 0.10.3 - Nov 7th 2008
  o Following reported issues have been fixed: 215, 214, 201, 220, 216, 194,
    229, 227, 224, 206, 204, 192, 193, 125, 164, 228, 225, 199, 235, 237,
    226, 231, 238, 230, 240, 241
  o Most new features introduced in Google Desktop Windows 5.8 have been
    supported, except edit.detectUrls and personalization API. Please refer to:
    http://code.google.com/apis/desktop/docs/releasenotes-v58.html
  o View decorator related classes have been refactored to support KDE Plasma.
  o The binary dependency problem of xulrunner and libmozjs has been fixed by
    introducing a glue layer (extensions/smjs_script_runtime/libmozjs_glue.*).
  o analytics_usage_collector module has been added to collect usage data.
  o cmake build scripts have been included in source package, though it's still
    not widely tested and may have bugs.
  o Many improvements have been made for qt host.
  o Many other small fixes.

* 0.10.2 - Sept 13th 2008